# llm-resume-evaluation

./: .gitignore  README.md  pyproject.toml  resp.txt  test.py
app/: evalulate.py  main.py  predict.py  preprocess.py
app/agents/: base.py  content_parser.py  evaluation.py  jd_extractor.py  resume_extractor.py  sentence_classification.py  utils.py
app/controllers/: file.py  matching.py
app/prompt/: eval.md  eval_v1.py  jd.md  resume.md
app/schema/: agent.py  file.py  user_input.py
app/workflow/: node.py  state.py  workflow.py
data/cv_job_matching/: README.md
data/resume_jd_matching/: README.md  test.csv  train.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
notebooks/: data.ipynb  error.csv  eval.ipynb  exp1.ipynb  preprocess.ipynb  slm_cv_jd_merge.ipynb  slm_cv_jd_seperation.ipynb
notebooks/prompt_tuning/: anthropic_pipeline.ipynb  ee_anthropic_pipeline.ipynb  ee_gemini_pipeline.ipynb  ee_openai_pipeline.ipynb  gemini_pipeline.ipynb  gemma_pipeline.ipynb  llama_pipeline.ipynb  openai_pipeline.ipynb  openai_tuning.ipynb
notebooks/prompt_tuning/preds/: gemma_collected.json  gemma_kaggle.json  golds_collected.json  golds_kaggle.json  preds_anthropic_collected.json  preds_anthropic_kaggle.json  preds_ee_anthropic_collected.json  preds_ee_anthropic_kaggle.json  preds_ee_gemini_collected.json  preds_ee_gemini_kaggle.json  (+6 more)
results/cv_job_matching/: outputs.jsonl  parsed_contents.json  scores.jsonl
results/resume_jd_matching/: outputs_test.jsonl  outputs_train.jsonl
